--- a/Pipeline.ini
+++ b/Pipeline.ini
@@ -12,5 +12,6 @@ Portfolio Analysis
 │       
 │
 ├── main.py                        # Runs entire pipeline
+├── YOU ARE HERE (pipeline.ini)
 ├── requirements.txt
 └── README.md
