--- a/Pipeline.ini
+++ b/Pipeline.ini
@@ -3,7 +3,7 @@ Portfolio Analysis
 ├── portfolio/
 │   ├── __init__.py
 │   ├── data                        # Store Data and Html
-│   ├── scirpts                     # utils and functions
+│   ├── scripts                     # utils and functions
           |—— utils.py              # Position, Shares, Latest Price
           |—— calculate_percentages.py # Calculate percentages
           |—— calculate_pnl.py         # Calculate profit and loss
