--- a/Pipeline.ini
+++ b/Pipeline.ini
@@ -2,16 +2,17 @@ Portfolio Analysis
 │
 ├── portfolio/
 │   ├── __init__.py
-│   ├── data                        # Store Data and Html
-│   ├── scripts                     # utils and functions
-          |—— utils.py              # Position, Shares, Latest Price
-          |—— calculate_percentages.py # Calculate percentages
-          |—— calculate_pnl.py         # Calculate profit and loss
-          |—— web_report.py            # Html 
-          |—— web_dashboard.py         # App
+│   ├── data                            # Store Data and Html
+│   ├── scripts                         # utils and functions
+          |—— utils.py                  # Position, Shares, Latest Price
+          |—— calculate_percentages.py  # Calculate percentages
+          |—— calculate_pnl.py          # Calculate profit and loss
+          |—— web_report.py             # Html 
+          |—— web_dashboard.py          # App
 │       
 │
-├── main.py                        # Runs entire pipeline
+├── main.py                             # Runs entire pipeline
 ├── YOU ARE HERE (pipeline.ini)
+├── VLM.ipynb                           # A notebook connects a VLM to read portfolio screenshots
 ├── requirements.txt
 └── README.md
